--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ contourpy==1.3.2
 cycler==0.12.1
 decorator==5.2.1
 docopt==0.6.2
+dotenv==0.9.9
 einops==0.8.1
 filelock==3.18.0
 fonttools==4.57.0
@@ -37,6 +38,7 @@ joblib==1.4.2
 julius==0.2.7
 kiwisolver==1.4.8
 lazy_loader==0.4
+Levenshtein==0.27.1
 librosa==0.11.0
 lightning==2.5.1
 lightning-utilities==0.14.3
@@ -75,10 +77,13 @@ pydantic_core==2.33.1
 Pygments==2.19.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-Levenshtein==0.27.1
 pytorch-lightning==2.5.1
 pytorch-metric-learning==2.8.1
 pytz==2025.2
 PyYAML==6.0.2
+RapidFuzz==3.13.0
 regex==2024.11.6
 requests==2.32.3
 rev_ai==2.21.0
@@ -118,3 +123,4 @@ urllib3==2.4.0
 websocket-client==0.59.0
 websockets==15.0.1
 yarl==1.20.0
+yt-dlp==2025.3.31
