--- a/buildspec.yml
+++ b/buildspec.yml
@@ -40,7 +40,8 @@ phases:
 
       - apt-get -qq -o=Dpkg::Use-Pty=0 -y install python3-pip 1> /dev/null
       - python3 --version
-      - pip install --no-cache -r requirements.txt
+      - pip install --upgrade pip
+      - pip install --no-cache --upgrade -r requirements.txt
 
 
   build:
