--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
+clickhouse-connect==0.8.15
 colorlog==6.9.0
 contourpy==1.3.2
 cycler==0.12.1
@@ -43,18 +44,20 @@ librosa==0.11.0
 lightning==2.5.1
 lightning-utilities==0.14.3
 llvmlite==0.44.0
+lz4==4.4.3
 Mako==1.3.10
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.1
 mdurl==0.1.2
 more-itertools==10.6.0
+-e git+ssh://git@github.com/jpalatmp/mp-analytics.git@d0bffb9be758a13d0229d2d02c6920e9d3e14192#egg=mp_analytics
 mpmath==1.3.0
 msgpack==1.1.0
 multidict==6.4.3
 networkx==3.4.2
 numba==0.61.2
-numpy==2.2.4
+numpy==2.2.2
 omegaconf==2.3.0
 openai-whisper==20240930
 optuna==4.3.0
@@ -74,6 +77,7 @@ pyannote.pipeline==3.0.1
 pycparser==2.22
 pydantic==2.11.3
 pydantic_core==2.33.1
+pydub==0.25.1
 Pygments==2.19.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
@@ -81,7 +85,7 @@ python-dotenv==1.1.0
 python-Levenshtein==0.27.1
 pytorch-lightning==2.5.1
 pytorch-metric-learning==2.8.1
-pytz==2025.2
+pytz==2025.1
 PyYAML==6.0.2
 RapidFuzz==3.13.0
 regex==2024.11.6
@@ -118,9 +122,10 @@ tqdm==4.67.1
 typer==0.15.2
 typing-inspection==0.4.0
 typing_extensions==4.13.2
-tzdata==2025.2
-urllib3==2.4.0
+tzdata==2025.1
+urllib3==2.3.0
 websocket-client==0.59.0
 websockets==15.0.1
 yarl==1.20.0
 yt-dlp==2025.3.31
+zstandard==0.23.0
