--- a/requirements.txt
+++ b/requirements.txt
@@ -125,3 +125,36 @@ websocket-client==0.59.0
 websockets==15.0.1
 yarl==1.20.0
 yt-dlp==2025.3.31
+numpy>=1.21.0
+scipy>=1.7.0
+pandas>=1.3.0
+torch>=1.9.0
+torchaudio>=0.9.0
+librosa>=0.8.1
+soundfile>=0.10.3
+
+# Speech processing
+speechbrain>=0.5.12
+transformers>=4.21.0
+datasets>=2.0.0
+
+# Evaluation metrics
+python-Levenshtein>=0.12.0
+editdistance>=0.6.0
+
+# Data processing
+python-dotenv>=0.19.0
+
+# Visualization
+matplotlib>=3.5.0
+seaborn>=0.11.0
+
+# API clients
+assemblyai>=0.15.0
+
+# File handling
+boto3>=1.20.0
+
+# Additional utilities
+pyannote.audio>=2.1.1
+whisper>=1.0
